# opencv_free_course

./: .gitignore  01_Getting_Started_with_Images.ipynb  02_Basic_Image_Manipulations_Crop_Resize_Flip_and_Modify_Pixels.ipynb  pyproject.toml
